--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Bolt.new related issues
-    url: https://github.com/stackblitz/bolt.new/issues/new/choose
-    about: Report issues related to Bolt.new (not Bolt.diy)
+  - name: AiMazing related issues
+    url: https://github.com/fenago/AiMazing/issues/new/choose
+    about: Report issues related to AiMazing by Dr. Ernesto Lee
   - name: Chat
     url: https://thinktank.ottomator.ai
-    about: Ask questions and discuss with other Bolt.diy users.
+    about: Ask questions and discuss with other AiMazing users.
